# opinionated-python-starter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
