[tool.poetry]
name = "opinionated-starter"
version = "0.1.0"
description = ""
authors = ["Dan Clayton <daniel@cl8on.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "N"]