[tool.poetry]
name = "opinionated-starter"
version = "0.1.0"
description = ""
authors = ["Dan Clayton <daniel@cl8on.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
ruff = "^0.1.3"
poethepoet = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I", "N"]

[tool.poe.tasks.format]
sequence = ["black .", "ruff --select I --fix ."]
help = "Format all code with black and sort imports with ruff"
default_item_type = "cmd"

[tool.poe.tasks.lint]
sequence = ["ruff check .", "black --check .", "mypy opinionated_starter"]
help = "Run all linting, including ruff, black (check only) and mypy"
default_item_type = "cmd"